fix: NightVision onEnable